# Data-Mining-Project

./: .gitignore  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INFO.md  Dokumentacja_Projekt_Data_Mining.ipynb  LICENSE  ProjektAED.ipynb  README.md  analiza_rfm.ipynb  eda.ipynb  pyproject.toml
